chore: prettier and vscode global settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-    "semi": true,
-    "arrowParens": "avoid",
-    "singleAttributePerLine": true,
-    "printWidth": 75,
-    "endOfLine": "lf",
-    "tabWidth": 4
+	"semi": true,
+	"arrowParens": "avoid",
+	"singleAttributePerLine": true,
+	"printWidth": 75,
+	"endOfLine": "lf",
+	"tabWidth": 4,
+	"useTabs": true
 }
