--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.tabSize": 4
+	"editor.tabSize": 4,
+	"editor.rulers": [],
+	"editor.wordWrapColumn": 75,
+	"editor.wordWrap": "wordWrapColumn"
 }
