chore: eslint config for vscode and debugger rule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
 	"editor.tabSize": 4,
 	"editor.rulers": [],
 	"editor.wordWrapColumn": 75,
-	"editor.wordWrap": "wordWrapColumn"
+	"editor.wordWrap": "wordWrapColumn",
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact",
+		"vue"
+	]
 }
