--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,8 @@
 	"editor.wordWrap": "wordWrapColumn",
 	"eslint.validate": [
 		"javascript",
-		"javascriptreact",
 		"typescript",
-		"typescriptreact",
-		"vue"
+		"javascriptreact",
+		"typescriptreact"
 	]
 }
