--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"lint": "eslint . --fix --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0"
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.3",
 		"react": "^18.3.1",
+		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
