--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
 		"lint": "eslint . --fix --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0"
 	},
 	"dependencies": {
-		"bootstrap": "^5.3.3",
+		"@emotion/cache": "^11.13.1",
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
+		"@mui/icons-material": "^5.16.7",
+		"@mui/material": "^5.16.7",
 		"react": "^18.3.1",
-		"react-bootstrap": "^2.10.4",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"stylis": "^4.3.2",
+		"stylis-plugin-rtl": "^2.1.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/stylis": "^4.2.6",
 		"@typescript-eslint/eslint-plugin": "7.15.0",
 		"@typescript-eslint/parser": "7.15.0",
 		"@vitejs/plugin-react": "^4",
