--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mui/icons-material": "^5.16.7",
 		"@mui/lab": "5.0.0-alpha.173",
 		"@mui/material": "^5.16.7",
+		"@tanstack/react-query": "^5.56.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.2",
