--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@mui/material": "^5.16.7",
 		"@tanstack/react-query": "^5.56.2",
 		"react": "^18.3.1",
+		"react-date-object": "^2.1.9",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.2",
 		"react-toastify": "^10.0.5",
